# dlinear4

./: .bazelignore  .gitignore  BUILD.bazel  WORKSPACE  compile.sh  dlinear-benchmark.sh
.github/workflows/: main.yml
benchmark/: BUILD.bazel  LP.sh  LP2.sh  QF_LRA.sh  README.md  SS.sh  benchmark.conf  benchmark.sh  benchmark_main.cc  benchmark_parser.py  benchmark_program.cc  benchmark_program.hh  dlinear-benchmark-build.sh  info_gatherer.cc  info_gatherer.hh  produce_benchmark.sh
benchmark/smt2_all/: random.sh
benchmark/util/: BUILD.bazel  config.cc  config.hh  info_gatherer.cc  utils.cc  utils.hh
dreal/: BUILD.bazel  dreal_main.cc  main_program.cc  main_program.h  qsopt_ex.cc  workspace.bzl
dreal/smt2/: BUILD.bazel  driver.cc  driver.h  main.cpp
dreal/solver/: BUILD.bazel  context_impl.h  qsoptex_sat_solver.cc  qsoptex_theory_solver.cc  soplex_sat_solver.cc  soplex_theory_solver.cc
setup/ubuntu/ansible/: README.md  inv.yml  main.yml
setup/ubuntu/ansible/subtasks/: dLinear.yml  setup.yml
test/: BUILD.bazel
tools/: BUILD  dreal.bzl  ezoptionparser.BUILD.bazel  linux_libs.BUILD.bazel  make-variables.bzl
